addea a grid section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,97 @@
 
 </head>
 <body class="font-poppins">
+    <header>
+        <nav class="w-11/12 m-auto">
+            <div class="navbar">
+                <div class="navbar">
+                  <div class="dropdown">
+                    <div tabindex="0" role="" class="btn btn-ghost lg:hidden">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                    <ul
+                      tabindex="0"
+                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                      <li><a>Home</a></li>
+                    <li><a>Everything</a></li>
+                    <li><a>Groceries</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Contact</a></li>
+                    </ul>
+                  </div>
+                    <a href="#">
+                        <img src="images/logo.svg" alt="">
+                    </a>
+                  
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1">
+                    <li><a>Home</a></li>
+                    <li><a>Everything</a></li>
+                    <li><a>Groceries</a></li>
+                    <li><a>About</a></li>
+                    <li><a>Contact</a></li>
+                  </ul>
+                </div>
+                <div class="navbar-end">
+                  <a class="">
+                    <div>
+                        <span>
+                            $10.00
+                        </span>
+                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-cart-arrow-down"></i>
+                    </div>
+                  </a>
+                </div>
+              </div>
+        </nav>
+    </header>
+
+    <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <!-- card-1 -->
+        <div class="py-8 shadow-lg ">
+            <img src="images/product01.jpg" alt="">
+            <div class="text-center">
+                <span>Groceries</span>
+                <h4>Assorted Coffee</h4>
+                <p>$35.00</p>
+                <button></button>
+            </div>
+
+        </div><!-- card-1 -->
+        <div class="py-8 shadow-lg">
+            <img src="images/product01.jpg" alt="">
+            <div class="text-center">
+                <span>Groceries</span>
+                <h4>Assorted Coffee</h4>
+                <p>$35.00</p>
+                <button></button>
+            </div>
+
+        </div><!-- card-1 -->
+        <div class=" py-8 shadow-lg">
+            <img src="images/product01.jpg" alt="">
+            <div class="text-center">
+                <span>Groceries</span>
+                <h4>Assorted Coffee</h4>
+                <p>$35.00</p>
+                <button></button>
+            </div>
+
+        </div><!-- card-1 -->
+        <div class=" py-8 shadow-lg">
+            <img src="images/product01.jpg" alt="">
+            <div class="text-center">
+                <span>Groceries</span>
+                <h4>Assorted Coffee</h4>
+                <p>$35.00</p>
+                <button></button>
+            </div>
+
+        </div>
+
+    </section>
     
 </body>
 </html>
